fix : alignment of bento grid

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,3 +81,8 @@ body {
     @apply bg-background text-foreground;
   }
 }
+@layer utilities {
+  .row-span-1\.5 {
+    grid-row: span 1.5 / span 1.5;
+  }
+}
